[gd_scene load_steps=17 format=3 uid="uid://bcql74dv86uro"]

[ext_resource type="Script" uid="uid://cgoj5xx1mdtii" path="res://Menus/Button/button_upgrade.gd" id="1_ak5kn"]
[ext_resource type="Texture2D" uid="uid://sa1meneesdx0" path="res://Assets/kenney_fantasy-ui-borders/PNG/Double/Border/panel-border-000.png" id="2_ka3qv"]
[ext_resource type="Texture2D" uid="uid://bffsgoseleqt1" path="res://Assets/kenney_cursor-pack/PNG/Basic/Default/steps.png" id="3_x6at1"]
[ext_resource type="Texture2D" uid="uid://3ic8c83a4tle" path="res://Assets/kenney_simple-space/PNG/Default/star_large.png" id="4_x6at1"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ps8kx"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_dnx8w"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_d1ypf"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_xabms"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ouqe2"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_8jchn"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_d4np6"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_snme7"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ivyo2"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_atfg0"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_tx7v4"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_6ot1q"]

[node name="ButtonUpgrade" type="Node2D"]
script = ExtResource("1_ak5kn")

[node name="Panel" type="Panel" parent="."]
modulate = Color(0, 1, 0, 1)
offset_left = -17.0
offset_top = 19.0
offset_right = 19.0
offset_bottom = 19.0
theme_override_styles/panel = SubResource("StyleBoxFlat_ps8kx")

[node name="ButtonBorder" type="Sprite2D" parent="."]
position = Vector2(1, 1.0359)
scale = Vector2(0.500748, 0.500748)
texture = ExtResource("2_ka3qv")

[node name="ButtonIcon" type="Sprite2D" parent="."]
position = Vector2(1, 1.0359)
texture = ExtResource("3_x6at1")

[node name="Button" type="Button" parent="."]
offset_left = -23.0
offset_top = -22.9641
offset_right = 25.0
offset_bottom = 25.0359
theme_override_styles/focus = SubResource("StyleBoxEmpty_dnx8w")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_d1ypf")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_xabms")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_ouqe2")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_8jchn")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_d4np6")
theme_override_styles/hover = SubResource("StyleBoxEmpty_snme7")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_ivyo2")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_atfg0")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_tx7v4")
theme_override_styles/normal = SubResource("StyleBoxEmpty_6ot1q")

[node name="Price" type="Label" parent="."]
offset_left = -43.0
offset_top = 28.0359
offset_right = 9.0
offset_bottom = 51.0359
text = "5000"
horizontal_alignment = 2

[node name="StarMedium" type="Sprite2D" parent="."]
position = Vector2(19, 40.0359)
scale = Vector2(0.262389, 0.262389)
texture = ExtResource("4_x6at1")

[node name="Description" type="Label" parent="."]
visible = false
offset_left = -84.0
offset_top = -56.0
offset_right = 89.0
offset_bottom = -25.0
text = "Upgrade Velocity"
horizontal_alignment = 1

[connection signal="mouse_entered" from="Button" to="." method="_on_button_mouse_entered"]
[connection signal="mouse_exited" from="Button" to="." method="_on_button_mouse_exited"]
